--- a/Gym-Management/gym-management/nbproject/project.properties
+++ b/Gym-Management/gym-management/nbproject/project.properties
@@ -33,9 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/gym-management
 excludes=
+file.reference.commons-dbutils-1.7-src.zip=..\\..\\..\\..\\..\\..\\Downloads\\commons-dbutils-1.7-src.zip
+file.reference.JCalendar.jar=../../../../../../Downloads/jcalendar.jar~/JCalendar.jar
+file.reference.rs2xml.jar=..\\..\\..\\..\\..\\..\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.JCalendar.jar}:\
+    ${libs.MySQL_JDBC.classpath}:\
+    ${file.reference.commons-dbutils-1.7-src.zip}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
