--- a/Gym-Management/gym-management/nbproject/private/private.properties
+++ b/Gym-Management/gym-management/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Mudit Agarwal\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
